--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Тестовое задание на Django для UTF-Tech"
 authors = ["Павел Костюк <pavkos0725@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -11,6 +12,7 @@ Django = "^5.1.3"
 django-rest-framework = "^0.1.0"
 django-model-utils = "^5.0.0"
 python-dotenv = "^1.0.1"
+flake8 = "^7.1.1"
 
 
 [build-system]
